--- a/css/styles.css
+++ b/css/styles.css
@@ -565,6 +565,42 @@ img {
 .footer-circle:focus {
     background-color: #31D0AA;
 }
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+}
+
+.Subscribe-form{
+ margin-left: 80px;
+}
+
+.Subscribe-form p {
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.footer-input {
+    width: 264px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    padding: 0 16px;
+    color: #FFFFFF;
+}
+
+.footer-input::placeholder {
+    color: #FFF;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+}
 /*========================*/
 
 .backdrop {
@@ -634,6 +670,10 @@ img {
     margin-bottom: 8px;
 }
 
+.modal-fiel-comment {
+    margin-bottom: 16px;
+}
+
 .modal-input {
     width: 100%;
     border-radius: 4px;
@@ -692,21 +732,55 @@ img {
     pointer-events: auto;
 }
 
-.modal-sub-but {
 
+
+.modal-field {
+    margin-bottom: 24px;
+}
+
+.check-text {
+    color:  #8E8F99;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    display: flex;
+    align-items: center;
+}
+
+.check-text a {
+    color:  #4D5AE5;
+    text-decoration-line: underline;
+}
+
+.check-text span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: transparent;
+}
+
+.check-input:checked + .check-text span {
+    background-color: #404BBF;
+    border: none;
+    fill: #F4F4FD;
 }
 
 .modal-sub-but {
     background-color: #4D5AE5;
-    border-radius: 4px;
     border: none;
+    border-radius: 4px;
     color: #FFF;
     font-family: inherit;
-    font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    cursor: pointer;
     display: block;
     margin: 0 auto;
     padding: 16px 32px;
@@ -720,4 +794,5 @@ img {
 .modal-sub-but:focus {
     background-color: #404BBF;
     color: #FFF;
+    font-size: 16px;
 }
