--- a/css/styles.css
+++ b/css/styles.css
@@ -486,22 +486,22 @@ img {
 }
 
 .container-footer-webstudio {
-        margin-right: 120px;
+     margin-right: 120px;
 }
 
 .footer-logo {
     color: #4D5AE5;
-        font-family: "Raleway",sans-serif;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        display: inline-block;
-        margin-bottom: 16px;
-        transition-property: color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    font-family: "Raleway",sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 16px;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-logo:hover,
@@ -510,21 +510,21 @@ img {
 }
 
 .footer-logo-span{
-        font-family: "Raleway", sans-serif;
-        color: #F4F4FD;
-            font-size: 18px;
-            font-weight: 700;
-            line-height: 1.17;
-            letter-spacing: 0.03em;
-            text-transform: uppercase;
+    font-family: "Raleway", sans-serif;
+    color: #F4F4FD;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 .footer-text {
     color: #F4F4FD;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        max-width: 264px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    max-width: 264px;
 }
 
 .footer-media {
@@ -584,6 +584,16 @@ img {
     margin-bottom: 16px;
 }
 
+.email-btn-container {
+    display: flex;
+    align-items: center;
+}
+
+.footer-form {
+    display: flex;
+    align-items: center;
+}
+
 .footer-input {
     width: 264px;
     height: 40px;
@@ -593,6 +603,7 @@ img {
     background-color: transparent;
     padding: 0 16px;
     color: #FFFFFF;
+    margin-right: 24px;
 }
 
 .footer-input::placeholder {
@@ -601,6 +612,27 @@ img {
     line-height: 2;
     letter-spacing: 0.04em;
 }
+
+.footer-form-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 165px;
+    height: 40px;
+    color:  #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding: 8px 24px;
+    border: none;
+    background-color: #4D5AE5;
+    border-radius: 4px;
+    fill: #FFFFFF;
+}
+
+
 /*========================*/
 
 .backdrop {
@@ -621,7 +653,7 @@ img {
 
 .modal {
     width: 408px;
-    height: 584px;
+    height: auto;
     background-color: #FCFCFC;
     border-radius: 4px;
     position: absolute;
@@ -724,6 +756,13 @@ img {
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     resize: none;
+}
+
+.modal-text::placeholder {
+    color:rgba(46, 47, 66, 0.40);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
 }
 
 .is-open {
