--- a/css/styles.css
+++ b/css/styles.css
@@ -596,13 +596,13 @@ img {
 }
 
 .footer-form-input::placeholder {
-    color #ffffff;
+    color: #ffffff;
 }
 
 .footer-form-input {
     border-radius: 4px;
     border: 1px solid #FFF;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    filter: drop-shadow (0px 4px 4px rgba(0, 0, 0, 0.15));
     background-color: transparent;
     color: #FFFFFF;
     font-size: 12px;
@@ -832,14 +832,13 @@ img {
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     border-radius: 2px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-        border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1),
         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: transparent;
 }
 
-
-.check-input:checked + .check-text span {
+.check-input:checked + .check-text-span {
     background-color: #404BBF;
     border: none;
     fill: #F4F4FD;
