--- a/css/styles.css
+++ b/css/styles.css
@@ -838,7 +838,7 @@ img {
     fill: transparent;
 }
 
-.check-input:checked + .check-text-span {
+.check-input:checked + .check-text span {
     background-color: #404BBF;
     border: none;
     fill: #F4F4FD;
